--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pillow==11.0.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
